fixed overlap issue on messagecontainer and footer

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -163,6 +163,8 @@ footer img {
   justify-content: space-between;
   padding: 0;
   margin: 0;
+  margin-bottom: 70px;
+  min-height: 100vh;
 }
 
 .message-card {
